UIIN-904: Set fixed width for input fields

--- a/src/settings/HRIDHendling/HRIDHandling.css
+++ b/src/settings/HRIDHendling/HRIDHandling.css
@@ -16,6 +16,15 @@
    padding-left: 1rem;
 }
 
+.inputLabel {
+  width: 9rem;
+  padding: 0 0.5rem;
+}
+
+.inputField {
+  width: 9rem;
+}
+
 .descriptionRow {
    margin-bottom: 1rem;
 }
