UIIN-1112 fix View Source table styles

--- a/src/Instance/InstanceMarc/InstanceMarc.css
+++ b/src/Instance/InstanceMarc/InstanceMarc.css
@@ -6,5 +6,9 @@
   table-layout: fixed;
   border: 0;
   font-family: courier;
-  white-space: pre;
+  white-space: pre-wrap;
+
+  & tr td {
+    vertical-align: top;
+  }
 }
