--- a/src/settings/HRIDHandling/HRIDHandling.css
+++ b/src/settings/HRIDHandling/HRIDHandling.css
@@ -1,3 +1,5 @@
+@import '@folio/stripes-components/lib/variables';
+
 .form {
    width: 100%;
 }
@@ -8,6 +10,10 @@
 
 .headlineRow {
    margin-top: 1rem;
+}
+
+.checkboxLabel {
+  font-weight: var(--text-weight-regular);
 }
 
 .inputRow {
