UIIN-1380: Add warn icon for Suppressed from discovery instance/holdings/item

--- a/src/components/InstancesList/instances.css
+++ b/src/components/InstancesList/instances.css
@@ -3,6 +3,9 @@
 .actionIcon {
   margin-right: 10px;
 }
+.warnIcon {
+  margin-left: var(--gutter-static-one-third);
+}
 .cellAlign {
   align-items: flex-start;
 }
