Add bound-with icon and CSS

--- a/src/View.css
+++ b/src/View.css
@@ -5,3 +5,12 @@
 .multiTitle {
   color: red;
 }
+
+.warnIcon {
+  margin-left: var(--gutter-static-one-third);
+}
+
+.boundWithIcon {
+  background-color: transparent !important;
+  margin-left: var(--gutter-static-one-third);
+}
