--- a/src/View.css
+++ b/src/View.css
@@ -1,3 +1,16 @@
 .rowMarginBottom {
   margin-bottom: 0.5em;
 }
+
+.multiTitle {
+  color: red;
+}
+
+.warnIcon {
+  margin-left: var(--gutter-static-one-third);
+}
+
+.boundWithIcon {
+  background-color: transparent !important;
+  margin-left: var(--gutter-static-one-third);
+}
