UIIN-1826 use correct css-loader syntax
Use the correct syntax when linking to styles in other packages.

Refs UIIN-1826, STRIPES-770

--- a/src/components/SearchAndSort/components/SearchButton/SearchButton.css
+++ b/src/components/SearchAndSort/components/SearchButton/SearchButton.css
@@ -1,7 +1,7 @@
 @import '@folio/stripes-components/lib/variables';
 
 .button {
-  composes: boxOffsetSmall from "@folio/stripes-components/lib/sharedStyles/interactionStyles.css";
+  composes: boxOffsetSmall from "~@folio/stripes-components/lib/sharedStyles/interactionStyles.css";
   margin: 0;
   padding: 0;
   font-size: var(--font-size-medium);
