--- a/src/components/ElasticQueryField/ElasticQueryField.css
+++ b/src/components/ElasticQueryField/ElasticQueryField.css
@@ -9,16 +9,16 @@
 .optionMenu {
   position: absolute;
   width: 100%;
-  composes: multiSelectMenu from '@folio/stripes-components/lib/MultiSelection/MultiSelect.css';
+  composes: multiSelectMenu from '~@folio/stripes-components/lib/MultiSelection/MultiSelect.css';
 }
 
 .optionList {
   max-height: 168px;
-  composes: multiSelectOptionList from '@folio/stripes-components/lib/MultiSelection/MultiSelect.css';
+  composes: multiSelectOptionList from '~@folio/stripes-components/lib/MultiSelection/MultiSelect.css';
 }
 
 .option {
-  composes: option from '@folio/stripes-components/lib/Selection/Selection.css';
+  composes: option from '~@folio/stripes-components/lib/Selection/Selection.css';
 
   &:hover {
     box-shadow: inset 0 0 0 3px var(--primary);
@@ -26,7 +26,7 @@
 }
 
 .optionCursor {
-  composes: optionCursor from '@folio/stripes-components/lib/MultiSelection/MultiSelect.css';
+  composes: optionCursor from '~@folio/stripes-components/lib/MultiSelection/MultiSelect.css';
 }
 
 .info {
